# Sondlist

./: CMakeList.txt  CMakeLists.txt  README.md  build.cmd  songdialog.cpp  songdialog.h.txt  songdialog.ui  songlistdialog.cpp  songlistdialog.h  songlistdialog.ui  Тестовое задание Qt.doc
src/: main.cpp  songdialog.cpp  songdialog.h  songdialog.h.txt  songdialog.ui  songlistdialog.cpp  songlistdialog.h  songlistdialog.ui
